--- a/armadacritica/2025/017/styles.css
+++ b/armadacritica/2025/017/styles.css
@@ -46,6 +46,11 @@ li {
     margin-left: 40px;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 /* Estilos das abas */
 .tabs {
     display: flex;
