--- a/armadacritica/2025/017/styles.css
+++ b/armadacritica/2025/017/styles.css
@@ -23,23 +23,18 @@ body {
 h1 {
     text-align: center;
     margin-bottom: 30px;
-    color: #EE1C25;
+    color: yellow;
 }
 
 h2 {
     text-align: center;
     margin-bottom: 20px;
-    color: #333;
+    color: yellow;
 }
 
 h3 {
     margin-bottom: 20px;
     color: #EE1C25;
-}
-
-img {
-    border-radius: 4px;
-    padding: 10px;
 }
 
 li {
@@ -49,6 +44,11 @@ li {
 img {
   max-width: 100%;
   height: auto;
+  padding: 10px;
+}
+
+.middle {
+  vertical-align: baseline;
 }
 
 /* Estilos das abas */
@@ -56,6 +56,22 @@ img {
     display: flex;
     margin-bottom: 20px;
     border-bottom: 1px solid #ddd;
+}
+
+.left {
+  width: 25%;
+}
+
+.right {
+  width: 75%;
+}
+
+.row {
+  display: flex;
+}
+
+.red {
+  background-color: #FF0000;
 }
 
 .tab-button {
@@ -125,5 +141,9 @@ img {
     
     .tab-content {
         border-radius: 0;
+    }
+
+    .column {
+        width: 100%;
     }
 }
