--- a/armadacritica/2025/017/styles.css
+++ b/armadacritica/2025/017/styles.css
@@ -147,3 +147,34 @@ img {
         width: 100%;
     }
 }
+
+
+/* card de compartilhamento */
+.card {
+      width: 300px;
+      padding: 10px;
+      border: 1px solid red;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .card-image {
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    .card-content {
+      padding: 10px;
+    }
+    .card-title {
+      margin: 0;
+    }
+    .card-text {
+      font-style: italic;
+    }
+    .card-link {
+      display: inline-block;
+      padding: 5px 10px;
+      background-color: #4CAF50;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+    }
