--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Breda Two';
-    src: url('../../../assets/font/BredaTwo.woff2') format('woff2'),
-         url('../../../assets/font/BredaTwo.woff') format('woff');
+    src: url('assets/font/font/BredaTwo.woff2') format('woff2'),
+         url('assets/font/BredaTwo.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap; /* Opcional: controla como a fonte é carregada */
@@ -54,6 +54,13 @@ img {
   max-width: 100%;
   height: auto;
   padding: 10px;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .middle {
